# zrchain

./: .gitignore  .releaserc.json  .tool-versions  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  FIX_RUNNER_PATTERN_PLAN.md  Justfile  LICENSE  Makefile  README.md  buf.work.yaml  build.sh  config.yml  create_keys.sh  docker-compose.yml  go.mod  go.sum  gopls.json  init.sh  package-lock.json  package.json  start.sh
app/: abci.go  abci_helpers.go  ante.go  app.go  export.go  feeexcempt.go  feeexempt.go  genesis.go  upgrades.go
bitcoin/: bitcoin_test.go  blake2b_personal.go  merkle.go  merkle_test.go  types.go  utils.go  utils_test.go  utils_zcash_test.go
boolparser/: bool_test.go  parser.go  scanner.go  shunting.go  solver.go  stack.go  token.go
contractcall/: sudo.go
docs/: ONBOARDING.md  README.md
go-client/: README.md  query_client.go  query_client_auth.go  query_client_dct.go  query_client_identity.go  query_client_policies.go  query_client_treasury.go  query_client_validation.go  query_client_zenbtc.go  query_client_zenex.go  query_client_zentp.go  tx_bank.go  tx_client.go  tx_dct.go  tx_ica.go  tx_identity.go  tx_identity_client.go  tx_raw_client.go  tx_treasury.go  tx_validation.go  tx_zenbtc.go  tx_zenex.go  tx_zentp.go
policy/: policy.go  policy_test.go  types.go
proto/: buf.gen.dart.yaml  buf.gen.gogo.yaml  buf.yaml  (+2 more)
wasmbinding/contracts/bindings/: Cargo.toml
wasmbinding/contracts/bindings/src/: lib.rs  msg.rs  query.rs
wasmbinding/contracts/contract-example/: Cargo.toml  README.md
wasmbinding/contracts/contract-example/.cargo/: config
wasmbinding/contracts/contract-example/src/: contract.rs  lib.rs  msg.rs  query.rs
(+2449 files in other folders)
