[package]
name = "contract-example"
version = "0.0.0"
authors = [""]
edition = "2021"
publish = false
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
library = []

[dependencies]
cosmwasm-std = "2.0.2"
cosmwasm-schema = "2.0.0"
cosmwasm-storage = "1.1.0"
cw-storage-plus = "1.1.0"
thiserror = "1.0.49"
zenrock-bindings={ version = "0.0.1", path = "../bindings" }

[dev-dependencies]
